• Add 'My TV shows airing today' on default tv shows widget • Add 'Next episodes to watch' on default tv shows widget • Add yes/no dialog window when reset skin settings • Hide hard disk usage on Android system • Changes in PVR guide • Changes in personnalise home menu • Fix widgets with horizontal menu • Improve esthetic appearance

--- a/_tools/config.ini
+++ b/_tools/config.ini
@@ -1,10 +1,11 @@
 [addon]
 name=Guilouz Repository
 id=repository.guilouz
-version=1.0.0
+version=1.0.1
 author=Guilouz
 summary=Guilouz's addons repository
 description=Download and install Guilouz's addons repository.
+news=Initial
 
 
 [locations]
