• Add new 'Simple wall' view • Add possibility to hide posters info • Add Next Up popup for Live TV (Thanks to sualfred) • Add preview for select dialog • Add screenshots support on addon info • Fix seasons posters on some views • Fix fullscreen button with vertical menu • Other minor fixes

--- a/_tools/config.ini
+++ b/_tools/config.ini
@@ -1,10 +1,12 @@
 [addon]
 name=Guilouz Repository
 id=repository.guilouz
-version=1.0.1
+version=1.0.2
 author=Guilouz
 summary=Guilouz's addons repository
 description=Download and install Guilouz's addons repository.
+news=Initial
+assets=Initial
 
 
 [locations]
