--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-
-_repo/.DS_Store
-
-_repo/repository.guilouz/.DS_Store
-
-_repo/skin.estuary.mod/.DS_Store
-
-_repo/skin.estuary.mod/resources/.DS_Store
-
-_tools/.DS_Store
+_tools/
 
 .DS_Store
+*/.DS_Store
+.DS_Store
+.DS_Store?
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
